# BQuick

./: App-List.txt  Cargo.toml  LICENSE  README.md  install.bat  install.ps1
src/: app.rs  installer.rs  main.rs  ui.rs
src/categories/: browsers.rs  dev_tools.rs  gaming.rs  media.rs  mod.rs  utilities.rs
