[package]
name = "bquick"
version = "0.1.0"
edition = "2021"
authors = ["linux-brat"]
description = "Quick software installer for Windows via PowerShell/Chocolatey"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
